tests/NormalTests/paczka1/small_fuzzy/98702948.err
Error in line 1: 48zbgJ5XAN S252 11,4
Error in line 4: S252 S252 12,4
